# zentinel-agent-policy

./: .gitignore  LICENSE  README.md  cabal.project  mise.toml  sentinel-agent-policy.cabal  zentinel-agent-policy.cabal
app/: Main.hs
policies/: example.cedar  example.rego
src/Sentinel/Agent/: Policy.hs
src/Sentinel/Agent/Policy/: Cache.hs  Cedar.hs  Config.hs  Engine.hs  Handler.hs  Input.hs  Protocol.hs  Rego.hs  Types.hs
src/Zentinel/Agent/: Policy.hs
src/Zentinel/Agent/Policy/: Cache.hs  Cedar.hs  Config.hs  Engine.hs  Handler.hs  Input.hs  Protocol.hs  Rego.hs  Types.hs
test/: Main.hs
test/Test/Policy/: Cache.hs  Cedar.hs  Input.hs  Rego.hs
